--- a/Audio/Base.lproj/Main.storyboard
+++ b/Audio/Base.lproj/Main.storyboard
@@ -142,14 +142,22 @@
                                     </stackView>
                                 </subviews>
                             </stackView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NF2-ew-x5g">
+                                <rect key="frame" x="60" y="482" width="270" height="128"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="NF2-ew-x5g" firstAttribute="top" secondItem="bZi-h2-Sxo" secondAttribute="bottom" constant="45" id="NDp-xE-e3V"/>
+                            <constraint firstItem="NF2-ew-x5g" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="RRU-yn-Kic"/>
                             <constraint firstItem="bZi-h2-Sxo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h8h-tn-VXP"/>
+                            <constraint firstItem="NF2-ew-x5g" firstAttribute="top" secondItem="bZi-h2-Sxo" secondAttribute="bottom" constant="45" id="jox-Wn-amI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="NF2-ew-x5g" secondAttribute="trailing" constant="60" id="jrr-E9-drA"/>
                             <constraint firstItem="m9V-7z-yag" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lKS-lx-1qT"/>
                             <constraint firstItem="m9V-7z-yag" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="oAr-Wo-oO0"/>
                             <constraint firstItem="bZi-h2-Sxo" firstAttribute="top" secondItem="m9V-7z-yag" secondAttribute="bottom" constant="34" id="rsZ-Jd-a2Z"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="NF2-ew-x5g" secondAttribute="bottom" constant="200" id="swJ-L8-2Ul"/>
                         </constraints>
                     </view>
                     <connections>
@@ -157,6 +165,7 @@
                         <outlet property="btnPlay" destination="7jj-ha-i0I" id="psT-by-E8Q"/>
                         <outlet property="btnRecod" destination="bX4-6f-W53" id="jSm-w3-dqM"/>
                         <outlet property="btnStop" destination="CYH-CX-3dP" id="dMN-Bm-fTi"/>
+                        <outlet property="imageView" destination="NF2-ew-x5g" id="cV4-gi-PXo"/>
                         <outlet property="lblCurrentTime" destination="YR5-Jn-gdQ" id="37V-zc-hSz"/>
                         <outlet property="lblEndTime" destination="YR5-Jn-gdQ" id="Rz4-kw-BBp"/>
                         <outlet property="lblRecordTime" destination="d9B-sO-Hfu" id="hYu-l4-0VV"/>
